--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -1,37 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#111111"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
+    android:orientation="vertical">
     <RelativeLayout
-        android:background="#ffcd2626"
+        android:id="@+id/bar"
+        android:layout_width="fill_parent"
         android:layout_height="45.0dip"
-        android:layout_width="fill_parent">
+        android:background="#ffcd2626">
 
         <TextView
-            android:gravity="center"
             android:id="@+id/title_name"
-            android:layout_height="fill_parent"
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
             android:text="当前城市：北京"
             android:textColor="#ffffffff"
             android:textSize="20.0dip" />
 
         <ImageView
             android:id="@+id/title_back"
+            android:layout_width="45.0dip"
+            android:layout_height="45.0dip"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_height="45.0dip"
-            android:layout_width="45.0dip"
             android:src="@drawable/base_action_bar_back_normal" />
 
         <ImageView
-            android:background="#A71717"
-            android:gravity="center"
+            android:layout_width="1.0dip"
+            android:layout_height="40dip"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:layout_height="40dip"
             android:layout_toRightOf="@id/title_back"
-            android:layout_width="1.0dip" />
+            android:background="#A71717"
+            android:gravity="center" />
     </RelativeLayout>
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/search_text"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="4"
+            android:background="@android:color/white"/>
+        <Button
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/search"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:text="搜索"
+            android:layout_weight="1"
+            android:textSize="30sp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
+
+    <ListView
+        android:id="@+id/title_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
