--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/bar"
         android:layout_width="fill_parent"
-        android:layout_height="45.0dip"
+        android:layout_height="45dip"
         android:background="#ffcd2626">
 
         <TextView
@@ -43,11 +43,13 @@
         android:orientation="horizontal">
 
         <EditText
+            android:hint="查询城市"
             android:id="@+id/search_text"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="4"
-            android:background="@android:color/white"/>
+            android:background="@android:color/white"
+            android:layout_gravity="center"/>
         <Button
             android:background="@color/colorPrimaryDark"
             android:id="@+id/search"
@@ -56,7 +58,8 @@
             android:text="搜索"
             android:layout_weight="1"
             android:textSize="30sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
 
